# mansi_translator

./: .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.md   README.md  docker-compose.yaml  example.env  package-lock.json  pyproject.toml
.deploy/: docker-compose.yml  nginx.conf  update.sh
.github/workflows/: docker-hub.yml  test.yml
backend/: Dockerfile  pyproject.toml
backend/src/: base_models.py  main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  apiService.js  index.module.scss
frontend/src/components/Keyboard/: index.jsx  index.module.scss
frontend/src/components/SwapLanguagesButton/: index.jsx  index.module.scss
frontend/src/components/TextInput/: index.jsx  index.module.scss
frontend/src/components/TranslationWrapper/: index.jsx  index.module.scss
frontend/src/stores/: keyboardStore.js  rootStore.js
model_backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
model_backend/src/: app.py  ray_config.yaml  settings.py
models/: lightning_debug.ipynb  mt_data.py  mt_datasets.py  mt_model.py
models/configs/: mt_test_config.yaml  mt_train_config.yaml
models/mbart/: README.md  requirements.txt
models/mbart/notebooks/eval/: model_eval.ipynb  model_eval_mans_ru.ipynb
models/mbart/notebooks/mans_ru/: 02_train_ru_mans_bart_finetune (1).ipynb
models/mbart/notebooks/ru_mans/: 02_train_ru_mans_bart_finetune.ipynb
models/mbart/notebooks/tokenizer_train/: 01_mans_vocabulary.ipynb
models/nllb/: finetune.py  lightning_debug.ipynb  mt_data.py  mt_datasets.py  mt_model.py
models/nllb/configs/: mt_test_config.yaml  mt_train_config.yaml
parsing/: parse_bible.py  parse_book_1.py  parse_journal.py  pyproject.toml
parsing/pdf/: utils.py
parsing/pdf/scripts/: book_1.py  book_2.py
src/: base_models.py  main.py
