[tool.poetry]
name = "parsing"
version = "0.1.0"
description = ""
authors = ["Darina Rustamova <darisha6602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
bs4 = "^0.0.2"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
