[tool.poetry]
name = "parsing"
version = "0.1.0"
description = ""
authors = ["Timur Smirnov <tsmirnov@ptsecurity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
pre-commit = "^3.8.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
